<resources>
    <string name="app_name">MeLi</string>

    <string name="button_go_settings">Configurações</string>
    <string name="button_refresh">Atualizar</string>
    <string name="button_start">Entrar</string>

    <string name="empty"></string>

    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha deve ter entre 8 e 12 caracteres</string>
    <string name="error_no_connection_message">Sem conexão à internet.</string>

    <string name="formatted_results_label">Foram encontrados %d itens</string>
    <string name="formatted_status_and_sold_units">%s vendidos</string>

    <string name="hint_email">Informe seu email</string>
    <string name="hint_password">Informe sua senha</string>
    <string name="hint_query">Digite o que procura</string>

    <string name="label_attributes">Características</string>
    <string name="label_locale">Localização</string>
    <string name="label_seller_info">Informações do vendedor</string>
    <string name="label_seller_status">Classificação</string>
    <string name="label_warranty">Garantia</string>
    <string name="label_warranty_mercado_pago">Compra Garantida com o Mercado Pago</string>
    <string name="label_warranty_mercado_pago_sub">Receba o produto que está esperando ou devolvemos o dinheiro.</string>
    <string name="label_warranty_seller">Garantia do vendedor</string>
    <string name="label_warranty_seller_sub">Garantia do vendedor: 7 dias</string>

    <string name="title_detail">Produto</string>
    <string name="title_search">MeLi Test</string>
</resources>
